--- a/Templates/display_tables.html
+++ b/Templates/display_tables.html
@@ -3,38 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Display All Data</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-        }
-        h1 {
-            text-align: center;
-        }
-        h2 {
-            margin-top: 30px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        tr:hover {
-            background-color: #dddddd;
-        }
-    </style>
 </head>
 <body>
     <h1>Display All Data</h1>
@@ -52,7 +20,7 @@
         {% for row in customers %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -71,7 +39,7 @@
         {% for row in orders %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -90,7 +58,7 @@
         {% for row in author %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -109,7 +77,7 @@
         {% for row in publisher %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -128,7 +96,7 @@
         {% for row in staff %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -147,7 +115,7 @@
         {% for row in book %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -166,7 +134,7 @@
         {% for row in order_items %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -185,7 +153,7 @@
         {% for row in bookstore_storage %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
@@ -204,7 +172,7 @@
         {% for row in order_contains %}
             <tr>
                 {% for cell in row %}
-                    <td>{{ cell if cell is not none else 'null' }}</td>
+                    <td>{{ cell }}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
