--- a/Templates/index.html
+++ b/Templates/index.html
@@ -2,21 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Author Search</title>
+    <title>Index</title>
 </head>
 <body>
-    <h1>Search for Author</h1>
-    <form action="{{ url_for('author_info') }}" method="get">
-        <label for="author_id">Author ID:</label>
-        <select name="author_id" id="author_id">
-            {% for author_id in valid_author_ids %}
-            <option value="{{ author_id }}">{{ author_id }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit">Search</button>
-    </form>
-    <form action="{{ url_for('display_all_data') }}" method="get">
-        <button type="submit">Display All Tables</button>
-    </form>
+    <h1>Welcome to the Index Page</h1>
+    <!-- Link to display all tables -->
+    <a href="/display_all_data">Display All Tables</a>
 </body>
 </html>
