--- a/Templates/index.html
+++ b/Templates/index.html
@@ -8,5 +8,12 @@
     <h1>Welcome to the Index Page</h1>
     <!-- Link to display all tables -->
     <a href="/display_all_data">Display All Tables</a>
+
+    <h2>Display Author Information</h2>
+    <form action="/display_author_info" method="get">
+        <label for="author_id">Enter Author ID:</label>
+        <input type="text" id="author_id" name="author_id">
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
