--- a/Templates/index.html
+++ b/Templates/index.html
@@ -14,5 +14,28 @@
         <input type="text" id="author_id" name="author_id">
         <input type="submit" value="Submit">
     </form>
+
+    <h2>Display Customer Information</h2>
+    <form action="/search_customer" method="get">
+        <label for="customer_id">Enter Customer ID:</label>
+        <input type="text" id="customer_id" name="customer_id">
+        <input type="submit" value="Submit">
+    </form>
+    <h2>Insert New Customer</h2>
+    <form action="/insert_customer" method="POST">
+        <label for="customer_id">Customer ID:</label>
+        <input type="text" id="customer_id" name="customer_id" required><br>
+        
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name" required><br>
+        
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" name="last_name" required><br>
+        
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
+        
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
