--- a/Templates/index.html
+++ b/Templates/index.html
@@ -37,5 +37,12 @@
         
         <input type="submit" value="Submit">
     </form>
+
+    <h2>View Orders Assigned to Staff</h2>
+    <form action="/orders_assigned_to_staff" method="get">
+        <label for="staff_id">Enter Staff ID:</label>
+        <input type="text" id="staff_id" name="staff_id" required><br>
+        <input type="submit" value="View Orders">
+    </form>
 </body>
 </html>
