--- a/Templates/index.html
+++ b/Templates/index.html
@@ -44,5 +44,12 @@
         <input type="text" id="staff_id" name="staff_id" required><br>
         <input type="submit" value="View Orders">
     </form>
+
+    <h2>View Book Storage Information</h2>
+    <form action="/book_storage" method="get">
+        <label for="book_id">Enter Book ID:</label>
+        <input type="text" id="book_id" name="book_id" required><br>
+        <input type="submit" value="View Storage">
+    </form>
 </body>
 </html>
