--- a/Templates/index.html
+++ b/Templates/index.html
@@ -57,5 +57,19 @@
         <input type="text" id="book_id" name="book_id" required><br>
         <input type="submit" value="View Storage">
     </form>
+    <h2>Delete Customer</h2>
+    <form action="/delete_customer" method="post">
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" name="first_name"><br><br>
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" name="last_name"><br><br>
+        <input type="submit" value="Delete Customer">
+    </form>
+    <h2>Delete Book</h2>
+    <form action="/delete_book" method="post">
+        <label for="book_title">Book Title:</label>
+        <input type="text" id="book_title" name="title" required><br><br>
+        <input type="submit" value="Delete Book">
+    </form>
 </body>
 </html>
