--- a/Templates/index.html
+++ b/Templates/index.html
@@ -71,5 +71,22 @@
         <input type="text" id="book_title" name="title" required><br><br>
         <input type="submit" value="Delete Book">
     </form>
+    <h2>Update Customer ID</h2>
+    <form action="/update_customer_id" method="post">
+        <label for="old_customer_id">Old Customer ID:</label>
+        <input type="text" id="old_customer_id" name="old_customer_id" required><br><br>
+        <label for="new_customer_id">New Customer ID:</label>
+        <input type="text" id="new_customer_id" name="new_customer_id" required><br><br>
+        <input type="submit" value="Update Customer ID">
+    </form>
+    <h2>Update Staff ID</h2>
+    <form action="/update_staff_id" method="post">
+        <label for="old_staff_id">Old Staff ID:</label>
+        <input type="text" id="old_staff_id" name="old_staff_id" required><br><br>
+        <label for="new_staff_id">New Staff ID:</label>
+        <input type="text" id="new_staff_id" name="new_staff_id" required><br><br>
+        <input type="submit" value="Update Staff ID">
+    </form>
+
 </body>
 </html>
