--- a/Templates/index.html
+++ b/Templates/index.html
@@ -87,6 +87,13 @@
         <input type="text" id="new_staff_id" name="new_staff_id" required><br><br>
         <input type="submit" value="Update Staff ID">
     </form>
-
+    <h2>Update Book Price</h2>
+    <form action="/update_book_price" method="post">
+        <label for="book_id">Book ID:</label>
+        <input type="text" id="book_id" name="book_id" required><br><br>
+        <label for="new_price">New Price:</label>
+        <input type="text" id="new_price" name="new_price" required><br><br>
+        <input type="submit" value="Update Book Price">
+    </form>
 </body>
 </html>
