--- a/Templates/index.html
+++ b/Templates/index.html
@@ -95,5 +95,12 @@
         <input type="text" id="new_price" name="new_price" required><br><br>
         <input type="submit" value="Update Book Price">
     </form>
+    <h2>Update Order Price</h2>
+    <form action="/update_order_price" method="post">
+        <label for="order_id">Order ID:</label>
+        <input type="text" id="order_id" name="order_id" required><br><br>
+        <label for="new_price">New Price:</label>
+        <input type="text" id="new_price" name="new_price" required><br><br>
+        <input type="submit" value="Update Order Price">
 </body>
 </html>
