--- a/Templates/orders_assigned_to_staff.html
+++ b/Templates/orders_assigned_to_staff.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orders Assigned to Staff</title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 <body>
     <h1>Orders Assigned to Staff</h1>
