--- a/Templates/display_customer_info.html
+++ b/Templates/display_customer_info.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Customer Information</title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
+
 </head>
 <body>
     <h1>Customer Information</h1>
